# libsparsemat

./: CMakeLists.txt  INSTALL  README
examples/: main.c
include/: cpu.h  crs_matrix.h  matops.h  timeaux.h  tjds_matrix.h  vector.h
src/: cpu.c  crs_matrix.c  matops.c  timeaux.c  tjds_matrix.c  vector.c
tests/: cpu_test.c  crs_test.c  tjds_test.c  vector_test.c
